# Harold

./: .gitignore  Harold.ino  LICENSE.txt  README.md  main.py  requirements.txt  scrapemp3.sh  setup.cfg
Harold/: api.py  credentials.py.sample  get_user.py  harold.py  led_control.py  main.py
Harold_ino/: Harold_ino.ino
