[metadata]
name = Harold
summary = Heralding Arrivals Rather Obnoxiously Loud Device
description-file = README.md
license = MIT
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT License
	Programming Language :: Python
[files]
packages =
	Harold
[entry_points]
console_scripts =
	Harold = Harold.main:main
